<resources>
    <string name="app_name" translatable="false">Alar Studios</string>
    <string name="hint_login">Your login</string>
    <string name="hint_password">Your password</string>
    <string name="btn_enter">Enter</string>
    <string name="wrong_entered_data">You entered wrong login or password!</string>
    <string name="btn_ok">OK</string>
    <string name="title_country">Country :</string>
    <string name="title_name">Name :</string>
    <string name="title_id" translatable="false">ID :</string>
    <string name="btn_return">Return</string>
</resources>