<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:barrierDirection="end"
            app:constraint_referenced_ids="tv_country_title" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_id_title"
            style="@style/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_id"
            app:layout_constraintBottom_toTopOf="@id/tv_name_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_id"
            style="@style/subTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="KVR"
            android:layout_marginStart="10dp"
            app:layout_constraintStart_toStartOf="@id/barrier"
            app:layout_constraintTop_toTopOf="@id/tv_id_title" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_name_title"
            style="@style/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_name"
            app:layout_constraintBottom_toTopOf="@id/tv_country_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_id_title" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_name"
            style="@style/subTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:layout_marginStart="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/barrier"
            app:layout_constraintTop_toTopOf="@id/tv_name_title"
            tools:text="Владислав Кузьмин" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_country_title"
            style="@style/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_country"
            app:layout_constraintBottom_toTopOf="@id/map"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_name" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_country"
            style="@style/subTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Украина"
            android:layout_marginStart="10dp"
            app:layout_constraintStart_toStartOf="@id/barrier"
            app:layout_constraintTop_toTopOf="@id/tv_country_title" />


        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            app:layout_constraintBottom_toTopOf="@id/btn_return"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_country_title"
            tools:context=".fragments.data_info.DataInfoFragment" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_return"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/btn_return"
            app:layout_constraintTop_toBottomOf="@id/map"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
